feat(centralnic reseller java sdk): Introduce CNR Java SDK API connector
BREAKING CHANGE: Deprecate support for Hexonet Java SDK API connector and Introducing CNR Java SDK API connector