@@ -1,62 +1,115 @@
-package net.hexonet.apiconnector;
+package com.centralnicreseller.apiconnector;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
-import java.net.InetSocketAddress;
-import java.net.Proxy;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
+
 import javax.net.ssl.HttpsURLConnection;
 
 /**
- * APIClient is the entry point class for communicating with the insanely fast HEXONET backend api.
- * It allows two ways of communication:
+ * APIClient is the entry point class for communicating with the insanely fast
+ * CentralNic Reseller (fka RRPProxy) backend api. It allows two ways of
+ * communication:
  * <ul>
  * <li>session based communication</li>
  * <li>sessionless communication</li>
  * </ul>
- * A session based communication makes sense in case you use it to build your own frontend on top.
- * It allows also to use 2FA (2 Factor Auth) by providing "otp" in the config parameter of the login
- * method. A sessionless communication makes sense in case you do not need to care about the above
- * and you have just to request some commands.
- * 
+ * A session based communication makes sense in case you use it to build your
+ * own frontend on top. It allows also to use 2FA (2 Factor Auth) by providing
+ * "otp" in the config parameter of the login method. A sessionless
+ * communication makes sense in case you do not need to care about the above and
+ * you have just to request some commands.
+ *
  * Possible commands can be found
- * <a href= "https://github.com/hexonet/hexonet-api-documentation/tree/master/API">here.</a>
- * 
- * @author Kai Schwarz
+ * <a href=
+ * "https://kb.centralnicreseller.com/api/api-commands/api-command-reference">here.</a>
+ *
+ * APIClient is a class that represents an API client for making requests to an
+ * API server.
+ * It provides methods for setting up the client, performing API requests, and
+ * managing the API session.
+ *
+ * The APIClient class has the following features:
+ * - Ability to set a custom logger for debug mode
+ * - Ability to enable or disable debug output
+ * - Methods for encoding data before sending it to the API server
+ * - Methods for setting and getting the API connection URL
+ * - Methods for setting and getting credentials for API communication
+ * - Methods for starting and ending a session-based communication
+ * - Methods for making API requests and retrieving the API response
+ * - Methods for handling pagination in list queries
+ *
+ * This class is designed to be used in conjunction with an API server that
+ * supports the provided API commands.
+ * It is recommended to consult the API server documentation for more
+ * information on the available commands and their usage.
+ *
+ * @author Team Internet Group PLC
  * @version %I%, %G%
  * @since 2.0
  */
-public class APIClient {
-    /** high performance proxy setup API endpoint url */
-    public static final String ISPAPI_CONNECTION_URL_PROXY = "http://127.0.0.1/api/call.cgi";
-    /** common API endpoint url production environment */
-    public static final String ISPAPI_CONNECTION_URL_LIVE = "https://api.ispapi.net/api/call.cgi";
-    /** common API endpoint url OTE environment */
-    public static final String ISPAPI_CONNECTION_URL_OTE =
-            "https://api-ote.ispapi.net/api/call.cgi";
+public final class APIClient {
 
-    /** represents default http socket timeout */
-    private static int socketTimeout = 300000;
-    /** represents default api url to communicate with */
+    /**
+     * high performance proxy setup API endpoint url
+     */
+    public static final String CNR_CONNECTION_URL_PROXY = "http://127.0.0.1/api/call.cgi";
+    /**
+     * common API endpoint url production environment
+     */
+    public static final String CNR_CONNECTION_URL_LIVE = "https://api.rrpproxy.net/api/call.cgi";
+    /**
+     * common API endpoint url OTE environment
+     */
+    public static final String CNR_CONNECTION_URL_OTE = "https://api-ote.rrpproxy.net/api/call.cgi";
+
+    /**
+     * represents default http socket timeout
+     */
+    private static final int SOCKET_TIMEOUT = 300 * 1000;
+    /**
+     * represents default api url to communicate with
+     */
     private String socketURL;
     /**
-     * used for sessionbased communication (reuse of socket configuration after login)
+     * used for sessionbased communication (reuse of socket configuration after
+     * login)
      */
-    private SocketConfig socketConfig;
-    /** debug mode flag */
+    private final SocketConfig socketConfig;
+    /**
+     * debug mode flag
+     */
     private boolean debugMode;
-    /** user agent string */
+    /**
+     * role seperator
+     */
+    private final String roleSeparator = ":";
+    /**
+     * user agent string
+     */
     private String ua;
-    /** additional connection settings */
-    private Map<String, String> curlopts;
-    /** logger instance */
+    /**
+     * sub user account name
+     */
+    private String subUser = "";
+    /**
+     * additional connection settings
+     */
+    private final Map<String, String> curlopts;
+    /**
+     * logger instance
+     */
     private Logger logger;
 
     /**
@@ -65,16 +118,16 @@ public class APIClient {
     public APIClient() {
         this.ua = "";
         this.debugMode = false;
-        this.setURL(ISPAPI_CONNECTION_URL_LIVE);
+        this.setURL(CNR_CONNECTION_URL_LIVE);
         this.socketConfig = new SocketConfig();
         this.useLIVESystem();
-        this.curlopts = new HashMap<String, String>();
+        this.curlopts = new HashMap<>();
         this.setDefaultLogger();
     }
 
     /**
      * Set a custom logger for debug mdoe
-     * 
+     *
      * @param logger your custom logger class instance
      * @return Current APIClient instance for method chaining
      */
@@ -85,7 +138,7 @@ public class APIClient {
 
     /**
      * Activate the default logger for debug mode
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient setDefaultLogger() {
@@ -95,7 +148,7 @@ public class APIClient {
 
     /**
      * Enable Debug Output
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient enableDebugMode() {
@@ -105,7 +158,7 @@ public class APIClient {
 
     /**
      * Disable Debug Output
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient disableDebugMode() {
@@ -115,7 +168,7 @@ public class APIClient {
 
     /**
      * Method to use to encode data before sending it to the API Server
-     * 
+     *
      * @param cmd The command to request
      * @return the ready to use, encoded request payload
      */
@@ -125,8 +178,8 @@ public class APIClient {
 
     /**
      * Method to use to encode data before sending it to the API server
-     * 
-     * @param cmd The command to request
+     *
+     * @param cmd     The command to request
      * @param secured if password data shall be secured for output purposes
      * @return the ready to use, encoded and secured request payload
      */
@@ -147,7 +200,7 @@ public class APIClient {
                 String val = pair.getValue();
                 if (val != null) {
                     val = val.replaceAll("[\r\n]", "");
-                    if (!"".equals(val)) {// null check included
+                    if (!"".equals(val)) { // null check included
                         tmp.append(pair.getKey());
                         tmp.append("=");
                         tmp.append(val);
@@ -159,28 +212,20 @@ public class APIClient {
                 }
             }
             pd = tmp.toString().replaceAll("PASSWORD=[^\n]+", "PASSWORD=***");
-            data.append(URLEncoder.encode("s_command", "UTF-8"));
-            data.append("=");
-            data.append(URLEncoder.encode(pd, "UTF-8").replace("*", "%2A"));
-            return data.toString();
+            if (!cmd.isEmpty()) {
+                data.append(URLEncoder.encode("s_command", "UTF-8"));
+                data.append("=");
+                data.append(URLEncoder.encode(pd, "UTF-8").replace("*", "%2A"));
+            }
+            return data.toString().replaceAll("&$", "");
         } catch (UnsupportedEncodingException e) {
             return "";
         }
     }
 
     /**
-     * Get the API Session that is currently set
-     * 
-     * @return API Session or null
-     */
-    public String getSession() {
-        String sessid = this.socketConfig.getSession();
-        return (sessid == "") ? null : sessid;
-    }
-
-    /**
      * Get the API connection url that is currently set
-     * 
+     *
      * @return API connection url currently in use
      */
     public String getURL() {
@@ -188,27 +233,97 @@ public class APIClient {
     }
 
     /**
-     * Set a custom user agent header (useful for tools that use our SDK)
-     * 
-     * @param str user agent label
-     * @param rv user agent revision
+     * Set one time password to be used for API communication
+     *
      * @return Current APIClient instance for method chaining
      */
-    public APIClient setUserAgent(String str, String rv) {
-        return this.setUserAgent(str, rv, new ArrayList<String>());
+    public APIClient setPersistent() {
+        this.socketConfig.setPersistent();
+        return this;
+    }
+
+    /**
+     * Set an API session id to be used for API communication
+     *
+     * @param value API session id
+     * @return Current APIClient instance for method chaining
+     */
+    public APIClient setSession(String value) {
+        this.socketConfig.setSession(value);
+        return this;
+    }
+
+    /**
+     * Set an API user id
+     *
+     * @param value API user id
+     * @return Current APIClient instance for method chaining
+     */
+    public APIClient setLogin(String value) {
+        this.socketConfig.setLogin(value);
+        return this;
+    }
+
+    /**
+     * Apply session data (session id and system entity) to given client request
+     * session
+     *
+     * @param session ClientRequest session instance
+     * @return Current APIClient instance for method chaining
+     */
+    public APIClient saveSession(Map<String, Object> session) {
+        session.put("CNRUID", this.socketConfig.getLogin());
+        session.put("CNRSESSION", this.socketConfig.getSession());
+        return this;
+    }
+
+    /**
+     * Use existing configuration out of ClientRequest session to rebuild and reuse
+     * connection
+     * settings
+     *
+     * @param session ClientRequest session instance
+     * @return Current APIClient instance for method chaining
+     */
+    public APIClient reuseSession(Map<String, Object> session) {
+        this.setCredentials((String) session.get("CNRUID"));
+        this.setSession((String) session.get("CNRSESSION"));
+        return this;
+    }
+
+    /**
+     * Get the API Session that is currently set
+     *
+     * @return API Session or null
+     */
+    public String getSession() {
+        String sessid = this.socketConfig.getSession();
+        return ("".equals(sessid)) ? null : sessid;
     }
 
     /**
      * Set a custom user agent header (useful for tools that use our SDK)
-     * 
+     *
      * @param str user agent label
-     * @param rv user agent revision
-     * @param modules further modules to add to user agent string ["module/version"]
+     * @param rv  user agent revision
+     * @return Current APIClient instance for method chaining
+     */
+    public APIClient setUserAgent(String str, String rv) {
+        return this.setUserAgent(str, rv, new ArrayList<>());
+    }
+
+    /**
+     * Set a custom user agent header (useful for tools that use our SDK)
+     *
+     * @param str     user agent label
+     * @param rv      user agent revision
+     * @param modules further modules to add to user agent string
+     *                ["module/version"]
      * @return Current APIClient instance for method chaining
      */
     public APIClient setUserAgent(String str, String rv, ArrayList<String> modules) {
         StringBuilder mods = new StringBuilder(" ");
-        if (modules.size() > 0) {
+        if (!modules.isEmpty()) {
             for (int i = 0; i < modules.size(); i++) {
                 mods.append(modules.get(i));
                 mods.append(" ");
@@ -225,7 +340,7 @@ public class APIClient {
 
     /**
      * Get the user agent string
-     * 
+     *
      * @return user agent string
      */
     public String getUserAgent() {
@@ -242,7 +357,7 @@ public class APIClient {
 
     /**
      * Set proxy to use for API communication
-     * 
+     *
      * @param proxy proxy to use
      * @return Current APIClient instance for method chaining
      */
@@ -257,7 +372,7 @@ public class APIClient {
 
     /**
      * Get proxy configuration for API communication
-     * 
+     *
      * @return Proxy URL or null if not configured
      */
     public String getProxy() {
@@ -269,7 +384,7 @@ public class APIClient {
 
     /**
      * Set Referer Header to use for API communication
-     * 
+     *
      * @param referer Referer Header value
      * @return Current APIClient instance for method chaining
      */
@@ -284,7 +399,7 @@ public class APIClient {
 
     /**
      * Get the configured Referer Header Value
-     * 
+     *
      * @return Referer Header Value
      */
     public String getReferer() {
@@ -296,41 +411,16 @@ public class APIClient {
 
     /**
      * Get the current module version
-     * 
+     *
      * @return module version
      */
     public String getVersion() {
-        return "4.0.40";
-    }
-
-    /**
-     * Apply session data (session id and system entity) to given client request session
-     * 
-     * @param session ClientRequest session instance
-     * @return Current APIClient instance for method chaining
-     */
-    public APIClient saveSession(Map<String, Object> session) {
-        session.put("HXAPIentity", this.socketConfig.getSystemEntity());
-        session.put("HXAPIsession", this.socketConfig.getSession());
-        return this;
-    }
-
-    /**
-     * Use existing configuration out of ClientRequest session to rebuild and reuse connection
-     * settings
-     * 
-     * @param session ClientRequest session instance
-     * @return Current APIClient instance for method chaining
-     */
-    public APIClient reuseSession(Map<String, Object> session) {
-        this.socketConfig.setSystemEntity((String) session.get("HXAPIentity"));
-        this.setSession((String) session.get("HXAPIsession"));
-        return this;
+        return "4.0.26";
     }
 
     /**
      * Set another connection url to be used for API communication
-     * 
+     *
      * @param value API connection url to set
      * @return Current APIClient instance for method chaining
      */
@@ -340,44 +430,21 @@ public class APIClient {
     }
 
     /**
-     * Set one time password to be used for API communication
-     * 
-     * @param value one time password
+     * Set Credentials to be used for API communication
+     *
+     * @param uid account name
      * @return Current APIClient instance for method chaining
      */
-    public APIClient setOTP(String value) {
-        this.socketConfig.setOTP(value);
-        return this;
-    }
-
-    /**
-     * Set an API session id to be used for API communication
-     * 
-     * @param value API session id
-     * @return Current APIClient instance for method chaining
-     */
-    public APIClient setSession(String value) {
-        this.socketConfig.setSession(value);
-        return this;
-    }
-
-    /**
-     * Set an Remote IP Address to be used for API communication To be used in case you have an
-     * active ip filter setting.
-     * 
-     * @param value Remote IP Address
-     * @return Current APIClient instance for method chaining
-     */
-    public APIClient setRemoteIPAddress(String value) {
-        this.socketConfig.setRemoteAddress(value);
+    public APIClient setCredentials(String uid) {
+        this.socketConfig.setLogin(uid);
         return this;
     }
 
     /**
      * Set Credentials to be used for API communication
-     * 
+     *
      * @param uid account name
-     * @param pw account password
+     * @param pw  account password
      * @return Current APIClient instance for method chaining
      */
     public APIClient setCredentials(String uid, String pw) {
@@ -388,80 +455,47 @@ public class APIClient {
 
     /**
      * Set Credentials to be used for API communication
-     * 
-     * @param uid account name
+     *
+     * @param uid  account name
      * @param role role user id
-     * @param pw role user password
+     * @return Current APIClient instance for method chaining
+     */
+    public APIClient setRoleCredentials(String uid, String role) {
+        if (role != null && role.length() > 0) {
+            return this.setCredentials(uid + this.roleSeparator + role);
+        }
+        return this.setCredentials(uid);
+    }
+
+    /**
+     * Set Credentials to be used for API communication
+     *
+     * @param uid  account name
+     * @param role role user id
+     * @param pw   role user password
      * @return Current APIClient instance for method chaining
      */
     public APIClient setRoleCredentials(String uid, String role, String pw) {
         if (role != null && role.length() > 0) {
-            return this.setCredentials(uid + "!" + role, pw);
+            return this.setCredentials(uid + this.roleSeparator + role, pw);
         }
         return this.setCredentials(uid, pw);
     }
 
     /**
      * Perform API login to start session-based communication
-     * 
-     * @param otp optional one time password
-     * @return API Response
-     */
-    public Response login(String otp) {
-        this.setOTP(otp);
-        return this.login();
-    }
-
-    /**
-     * Perform API login to start session-based communication
-     * 
+     *
      * @return API Response
      */
     public Response login() {
-        Map<String, Object> cmd = new HashMap<String, Object>();
-        cmd.put("COMMAND", "StartSession");
-        Response rr = this.request(cmd);
+        this.setPersistent();
+        Map<String, Object> cmd = new HashMap<>();
+        Response rr = this.request(cmd, false);
+        this.setSession("");
         if (rr.isSuccess()) {
-            Column col = rr.getColumn("SESSION");
+            Column col = rr.getColumn("SESSIONID");
             if (col != null) {
                 this.setSession(col.getData().get(0));
-            } else {
-                this.setSession("");
-            }
-        }
-        return rr;
-    }
-
-    /**
-     * Perform API login to start session-based communication. Use given specific command
-     * parameters.
-     * 
-     * @param params given specific command parameters
-     * @param otp optional one time password
-     * @return API Response
-     */
-    public Response loginExtended(Map<String, String> params, String otp) {
-        this.setOTP(otp);
-        return this.loginExtended(params);
-    }
-
-    /**
-     * Perform API login to start session-based communication. Use given specific command
-     * parameters.
-     * 
-     * @param params given specific command parameters
-     * @return API Response
-     */
-    public Response loginExtended(Map<String, String> params) {
-        Map<String, Object> cmd = new HashMap<String, Object>(params);
-        cmd.put("COMMAND", "StartSession");
-        Response rr = this.request(cmd);
-        if (rr.isSuccess()) {
-            Column col = rr.getColumn("SESSION");
-            if (col != null) {
-                this.setSession(col.getData().get(0));
-            } else {
-                this.setSession("");
             }
         }
         return rr;
@@ -469,13 +503,13 @@ public class APIClient {
 
     /**
      * Perform API logout to close API session in use
-     * 
+     *
      * @return API Response
      */
     public Response logout() {
-        Map<String, Object> cmd = new HashMap<String, Object>();
-        cmd.put("Command", "EndSession");
-        Response rr = this.request(cmd);
+        Map<String, Object> cmd = new HashMap<>();
+        cmd.put("Command", "StopSession");
+        Response rr = this.request(cmd, false);
         if (rr.isSuccess()) {
             this.setSession("");
         }
@@ -484,11 +518,27 @@ public class APIClient {
 
     /**
      * Perform API request using the given command
-     * 
+     *
      * @param cmd API command to request
      * @return API Response
      */
     public Response request(Map<String, Object> cmd) {
+        return request(cmd, true);
+    }
+
+    /**
+     * Perform API request using the given command
+     *
+     * @param cmd         API command to request
+     * @param setUserView set user view
+     * @return API Response
+     */
+    public Response request(Map<String, Object> cmd, boolean setUserView) {
+        // set sub user id if available
+        if (setUserView && !this.subUser.isEmpty()) {
+            cmd.put("SUBUSER", this.subUser);
+        }
+
         // flatten nested api command bulk parameters
         Map<String, String> newcmd = this.flattenCommand(cmd);
         // auto convert umlaut names to punycode
@@ -497,23 +547,14 @@ public class APIClient {
         // request command to API
         String data = this.getPOSTData(newcmd);
         String secured = this.getPOSTData(newcmd, true);
-        Map<String, String> cfg = new HashMap<String, String>();
+        Map<String, String> cfg = new HashMap<>();
         cfg.put("CONNECTION_URL", this.socketURL);
-
         StringBuilder response = new StringBuilder("");
         Response r;
         String err = null;
         try {
-            URL myurl = new URL(cfg.get("CONNECTION_URL"));
+            URL myurl = (new URI(cfg.get("CONNECTION_URL"))).toURL();
             HttpsURLConnection con = (HttpsURLConnection) myurl.openConnection();
-            if (this.curlopts.containsKey("PROXY")) {
-                URL proxyurl = new URL(this.curlopts.get("PROXY"));
-                Proxy proxy = new Proxy(Proxy.Type.HTTP,
-                        new InetSocketAddress(proxyurl.getHost(), proxyurl.getPort()));
-                con = (HttpsURLConnection) myurl.openConnection(proxy);
-            } else {
-                con = (HttpsURLConnection) myurl.openConnection();
-            }
             con.setRequestMethod("POST");
             if (this.curlopts.containsKey("REFERER")) {
                 con.setRequestProperty("REFERER", this.curlopts.get("REFERER"));
@@ -522,26 +563,26 @@ public class APIClient {
             con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
             con.setRequestProperty("User-Agent", this.getUserAgent());
             con.setRequestProperty("Expect", "");
-            con.setConnectTimeout(APIClient.socketTimeout);
-            con.setReadTimeout(APIClient.socketTimeout);
+            con.setConnectTimeout(APIClient.SOCKET_TIMEOUT);
+            con.setReadTimeout(APIClient.SOCKET_TIMEOUT);
             con.setDoOutput(true);
             con.setDoInput(true);
             con.setUseCaches(false);
-            OutputStream os = con.getOutputStream();
-            os.write(data.getBytes());
-            os.flush();
-            os.close();
-            BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-            String inputLine;
-            while ((inputLine = in.readLine()) != null) {
-                if (!inputLine.isEmpty()) {
-                    response.append(inputLine);
-                    response.append("\n");
+            try (OutputStream os = con.getOutputStream()) {
+                os.write(data.getBytes());
+                os.flush();
+            }
+            try (BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()))) {
+                String inputLine;
+                while ((inputLine = in.readLine()) != null) {
+                    if (!inputLine.isEmpty()) {
+                        response.append(inputLine);
+                        response.append("\n");
+                    }
                 }
             }
-            in.close();
             con.disconnect();
-        } catch (Exception e) {
+        } catch (IOException | URISyntaxException e) {
             err = e.getMessage();
             response.append("httperror");
         }
@@ -553,13 +594,14 @@ public class APIClient {
     }
 
     /**
-     * Request the next page of list entries for the current list query Useful for tables
-     * 
+     * Request the next page of list entries for the current list query Useful
+     * for tables
+     *
      * @param rr API Response of current page
      * @return API Response or null in case there are no further list entries
      */
     public Response requestNextResponsePage(Response rr) {
-        Map<String, Object> mycmd = new HashMap<String, Object>();
+        Map<String, Object> mycmd = new HashMap<>();
         mycmd.putAll(rr.getCommand());
         if (mycmd.get("LAST") != null) {
             throw new Error(
@@ -583,13 +625,13 @@ public class APIClient {
 
     /**
      * Request all pages/entries for the given query command
-     * 
+     *
      * @param cmd API list command to use
      * @return List of API Responses
      */
     public ArrayList<Response> requestAllResponsePages(Map<String, String> cmd) {
-        ArrayList<Response> responses = new ArrayList<Response>();
-        Map<String, Object> mycmd = new HashMap<String, Object>(cmd);
+        ArrayList<Response> responses = new ArrayList<>();
+        Map<String, Object> mycmd = new HashMap<>(cmd);
         cmd.put("FIRST", "0");
         Response rr = this.request(mycmd);
         Response tmp = rr;
@@ -602,87 +644,85 @@ public class APIClient {
 
     /**
      * Set a data view to a given subuser
-     * 
+     *
      * @param uid subuser account name
      * @return Current APIClient instance for method chaining
      */
     public APIClient setUserView(String uid) {
-        this.socketConfig.setUser(uid);
+        this.subUser = uid;
         return this;
     }
 
     /**
      * Reset data view back from subuser to user
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient resetUserView() {
-        this.socketConfig.setUser("");
+        this.subUser = "";
         return this;
     }
 
     /**
-     * Activate High Performance Connection Setup (see README.md)
-     * 
+     * Activate High Performance Connection Setup
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient useHighPerformanceConnectionSetup() {
-        this.setURL(ISPAPI_CONNECTION_URL_PROXY);
+        this.setURL(CNR_CONNECTION_URL_PROXY);
         return this;
     }
 
     /**
      * Activate Default Connection Setup
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient useDefaultConnectionSetup() {
-        this.setURL(ISPAPI_CONNECTION_URL_LIVE);
+        this.setURL(CNR_CONNECTION_URL_LIVE);
         return this;
     }
 
     /**
      * Set OT&amp;E System for API communication
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient useOTESystem() {
-        this.setURL(ISPAPI_CONNECTION_URL_OTE);
-        this.socketConfig.setSystemEntity("1234");
+        this.setURL(CNR_CONNECTION_URL_OTE);
         return this;
     }
 
     /**
      * Set LIVE System for API communication (this is the default setting)
-     * 
+     *
      * @return Current APIClient instance for method chaining
      */
     public APIClient useLIVESystem() {
-        this.setURL(ISPAPI_CONNECTION_URL_LIVE);
-        this.socketConfig.setSystemEntity("54cd");
+        this.setURL(CNR_CONNECTION_URL_LIVE);
         return this;
     }
 
     /**
      * Flatten API command's nested arrays for easier handling
-     * 
+     *
      * @param cmd API Command
      * @return flattened API Command
      */
     private Map<String, String> flattenCommand(Map<String, Object> cmd) {
-        Map<String, String> newcmd = new HashMap<String, String>();
-        Iterator<Map.Entry<String, Object>> it = cmd.entrySet().iterator();
-        while (it.hasNext()) {
-            Map.Entry<String, Object> pair = it.next();
+        Map<String, String> newcmd = new HashMap<>();
+        if (cmd.isEmpty()) {
+            return newcmd;
+        }
+        for (Map.Entry<String, Object> pair : cmd.entrySet()) {
             Object val = pair.getValue();
             if (val != null) {
                 String key = pair.getKey().toUpperCase();
-                if (val instanceof String[]) {
-                    String[] param = (String[]) val;
+                if (val instanceof String[] param) {
                     int a = 0;
-                    for (int i = 0; i < param.length; i++) {
-                        String entry = param[i].replaceAll("[\r\n]", "");
-                        if (!"".equals(entry)) {// null check included
+                    for (String param1 : param) {
+                        String entry = param1.replaceAll("[\r\n]", "");
+                        if (!"".equals(entry)) { // null check included
                             newcmd.put(key + a, entry);
                             a++;
                         }
@@ -696,46 +736,48 @@ public class APIClient {
     }
 
     private Map<String, String> autoIDNConvert(Map<String, String> cmd) {
-        if (cmd.get("COMMAND").equalsIgnoreCase("ConvertIDN")) {
+        if (cmd.isEmpty()) {
             return cmd;
         }
-        ArrayList<String> toconvert = new ArrayList<String>();
-        ArrayList<String> keys = new ArrayList<String>();
+        // Define the regex patterns with case insensitivity
+        String keyPattern = "^(?i)(NAMESERVER|NS|DNSZONE)([0-9]*)$";
+        String objClassPattern = "^(?i)(DOMAIN(APPLICATION|BLOCKING)?|NAMESERVER|NS|DNSZONE)$";
+        String asciiPattern = "^[A-Za-z0-9.\\-]+$"; // Matches alphanumeric, dot, and hyphen
+
+        // Lists to track values to convert and their corresponding keys
+        ArrayList<String> toConvert = new ArrayList<>();
+        ArrayList<String> idxs = new ArrayList<>();
+
+        // Loop through the command map entries
         for (Map.Entry<String, String> entry : cmd.entrySet()) {
             String key = entry.getKey();
-            if (key.matches("^(DOMAIN|NAMESERVER|DNSZONE)([0-9]*)$")) {
-                keys.add(key);
-            }
-        }
-        if (keys.isEmpty()) {
-            return cmd;
-        }
-        ArrayList<String> idxs = new ArrayList<String>();
-        for (int i = 0; i < keys.size(); i++) {
-            String key = keys.get(i);
-            String val = cmd.get(key);
-            if (!val.matches("^[A-Za-z0-9. -]+$")) {
+            String val = entry.getValue();
+
+            // Check if the key matches the keyPattern or it's "OBJECTID" with a valid
+            // OBJECTCLASS
+            if ((key.matches(keyPattern)
+                    || ("OBJECTID".equalsIgnoreCase(key) && cmd.containsKey("OBJECTCLASS")
+                            && cmd.get("OBJECTCLASS").matches(objClassPattern)))
+                    && !val.matches(asciiPattern)) {
+
+                // Add to conversion list and track the key
+                toConvert.add(val);
                 idxs.add(key);
-                toconvert.add(val);
             }
         }
-        if (toconvert.isEmpty()) {
-            return cmd;
-        }
-        Map<String, Object> convertcmd = new HashMap<String, Object>();
-        convertcmd.put("COMMAND", "ConvertIDN");
-        convertcmd.put("DOMAIN", toconvert.toArray(new String[toconvert.size()]));
-        Response r = this.request(convertcmd);
-        if (r.isSuccess()) {
-            Column col = r.getColumn("ACE");
-            if (col != null) {
-                ArrayList<String> data = col.getData();
-                for (int idx = 0; idx < data.size(); idx++) {
-                    String pc = data.get(idx);
-                    cmd.replace(idxs.get(idx), pc);
-                }
+
+        // Perform conversion if there are values to convert
+        if (!toConvert.isEmpty()) {
+            IDNAConverter result = IDNAConverter.convert(toConvert); // Call the conversion method
+            List<String> data = result.getPcList(); // Get the punycode list from conversion
+
+            // Replace original values in cmd with their converted counterparts
+            for (int idx = 0; idx < data.size(); idx++) {
+                String convertedValue = data.get(idx);
+                cmd.put(idxs.get(idx), convertedValue);
             }
         }
-        return cmd;
+
+        return cmd; // Return the modified command map
     }
 }
